okd-deploy/seaside-service.yaml
kind: Service
apiVersion: v1
metadata:  
  name: seaside
spec:
  ports:    
    - name: seaside
      protocol: TCP
      port: 8080
      targetPort: 8080    
  selector:
    app: seaside
