okd-deploy/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: seaside
  namespace: varios
spec:
  host: seaside.lifia.ar
  port:
    targetPort: 8080-tcp
  to:
    kind: Service
    name: seaside
